--- a/styles.css
+++ b/styles.css
@@ -148,6 +148,7 @@ button {
 
 .text-box .heading {
   color: var(--text-color);
+  font-size: 33px;
 }
 .text-box .subtext {
   color: var(--text-light-color);
