--- a/styles.css
+++ b/styles.css
@@ -158,6 +158,10 @@ button {
   .section-container {
     padding: 60px 20px;
   }
+  .text-box .heading {
+    color: var(--text-color);
+    font-size: 28px;
+  }
 }
 
 /* HEADER */
