--- a/styles.css
+++ b/styles.css
@@ -203,7 +203,7 @@ button {
 @media screen and (max-width: 767px) {
   #site-header .navbar {
     position: fixed;
-    right: 100%;
+    left: 0;
     top: 0;
     width: 100%;
     background-color: var(--bg-color);
@@ -227,6 +227,10 @@ button {
     width: fit-content;
     margin-top: 10px;
     padding: 0;
+  }
+
+  #site-header .menu-btn svg {
+    fill: var(--primary-color);
   }
 }
 
